--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 
 <head>
-
 	<meta charset="utf-8">
 
 	<title>Title</title>
@@ -12,29 +11,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<link rel="preload" href="fonts/opensans.woff2" as="font">
+  	<link rel="preload" href="fonts/opensansbold.woff2" as="font">
+
+	<link rel="stylesheet" href="css/style.css">
+
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-
-  <link rel="preload" href="fonts/opensans.woff2" as="font">
-  <link rel="preload" href="fonts/opensansbold.woff2" as="font">
-
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="manifest" href="site.webmanifest">
 
 	<script>
         // Picture element HTML5 shiv
         document.createElement( "picture" );
-  </script>
-  <script src="js/picturefill.min.js" async></script>
-
+	</script>
+	<script src="js/picturefill.min.js" async></script>
 </head>
 
 <body>
 
 	<div style="display: none;">
-    <include src="build/img/sprite.svg"></include>
-  </div>
+    	<include src="build/img/sprite.svg"></include>
+	</div>
 
 	<header class="header">
 
