--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,15 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 	<link rel="manifest" href="site.webmanifest">
 
+	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#ff0000">
+	<meta name="msapplication-TileColor" content="#55342b">
+	<meta name="theme-color" content="#ffffff"> -->
+
 	<script>
         // Picture element HTML5 shiv
         document.createElement( "picture" );
